[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/Blank-popup.png" type="Texture" id=2]
[ext_resource path="res://art/MainMenu/resume.png" type="Texture" id=3]
[ext_resource path="res://art/MainMenu/restart.png" type="Texture" id=4]
[ext_resource path="res://art/MainMenu/Exit.png" type="Texture" id=5]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://art/MainMenu/Right.png" type="Texture" id=7]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 6 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0, 0, 0, 0.901961 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -118.5
margin_right = 147.0
margin_bottom = 118.5
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="resume" type="Button" parent="TextureRect"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.3
anchor_bottom = 0.2
margin_right = 177.8
margin_bottom = 43.6
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="restart" type="Button" parent="TextureRect"]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -7.62939e-06
margin_top = -1.0
margin_right = 207.2
margin_bottom = 90.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="Exit" type="Button" parent="TextureRect"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_right = 119.0
margin_bottom = -51.2
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="Confirm" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -118.5
margin_right = 147.0
margin_bottom = 118.5
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Confirm"]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.7
margin_left = 3.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Are you sure, Want to quit game?"
align = 1
autowrap = true

[node name="tick" type="Button" parent="Confirm"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = 2.0
margin_right = 48.5
margin_bottom = 55.6
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="close" type="Button" parent="Confirm"]
anchor_left = 0.6
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.99997
margin_top = 3.0
margin_right = -8.0
margin_bottom = 56.6
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true

[connection signal="button_down" from="TextureRect/resume" to="." method="_on_resume_button_down"]
[connection signal="button_up" from="TextureRect/resume" to="." method="_on_resume_button_up"]
[connection signal="pressed" from="TextureRect/resume" to="." method="_on_resume_pressed"]
[connection signal="button_down" from="TextureRect/restart" to="." method="_on_restart_button_down"]
[connection signal="button_up" from="TextureRect/restart" to="." method="_on_restart_button_up"]
[connection signal="pressed" from="TextureRect/restart" to="." method="_on_restart_pressed"]
[connection signal="button_down" from="TextureRect/Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_up" from="TextureRect/Exit" to="." method="_on_Exit_button_up"]
[connection signal="pressed" from="TextureRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="button_down" from="Confirm/tick" to="." method="_on_tick_button_down"]
[connection signal="button_up" from="Confirm/tick" to="." method="_on_tick_button_up"]
[connection signal="pressed" from="Confirm/tick" to="." method="_on_tick_pressed"]
[connection signal="button_down" from="Confirm/close" to="." method="_on_close_button_down"]
[connection signal="button_up" from="Confirm/close" to="." method="_on_close_button_up"]
[connection signal="pressed" from="Confirm/close" to="." method="_on_close_pressed"]
